ui/css/workbench.css
body {
    background: #aaaaaa !important;
    overflow: hidden;
}

.workbench {
    background: #aaaaaa;
    position: absolute;
    left: 0;
    top: 0;
    bottom: 0;
    right: 0;
    margin: 1em;
}

.workbenchTitle {
    background: white;
    color: black;
    text-align: left;
    height: 1.5em;
}

.workbenchBody {
    text-align: left;
    height: 100%;
}

.window {
    position: relative;
    background: #aaaaaa;
    height: 20em;
    width: 20em;
    display: flex;
    flex-direction: column;
}

.window .windowTitle {
    background: #aaaaaa;
}

.window:hover .windowBody2,
.window:hover .windowTitle {
    background: #5c799c;
}

.windowTitle > span:not(:first-child),
.windowTitle > svg:not(:first-child) {
    border-left: 1px solid white
}

.windowTitle > span:not(:last-child),
.windowTitle > svg:not(:last-child) {
    border-right: 1px solid black
}

.workbenchTitle > svg,
.windowTitle > svg {
    height: inherit;
    width: 2em;
    display: inline-block;
}

.workbenchTitle > span {
    width: calc(100% - 2em);
    overflow: hidden;
}

.workbenchTitle > svg {
    background: #aaaaaa;
    height: 1.39em;
}

.workbenchTitle > span,
.windowTitle > span {
    display: inline-block;
    padding-left: .5em;
}

.windowTitle .closeGadget {
    position: absolute;
    left: -1px;
}

.workbenchTitle .depthGadget,
.windowTitle .depthGadget {
    float: right;
}

button,
.window,
div.wbIcon > div:first-child > svg,
.raised {
    border-left: 1px solid white;
    border-top: 1px solid white;
    border-bottom: 1px solid black;
    border-right: 1px solid black;
}

.windowBody,
.windowBody1,
.sunken {
    border-left: 1px solid black;
    border-top: 1px solid black;
    border-bottom: 1px solid white;
    border-right: 1px solid white;
}

.windowTitle {
    font-weight: bold;
    color: black;
    text-align: left;
    padding-left: 0.125em;
    padding-right: 0.125em;
    height: 1.5em;
}

.windowBody1,
.windowBody2,
.windowBody {
    background: #aaaaaa;
}

.windowBody2,
.windowBody {
    overflow: auto;
    flex-grow: 1;
}

.windowBody1 {
    position: absolute;
    left: 0.25em;
    top: 1.5em;
    right: 1em;
    bottom: 1em;
    overflow: auto;
}

.windowBody2 {
    border-top: 1px solid black;
}

.windowBody2 .horizScroll {
    position: absolute;
    right: 1em;
    left: 0;
    bottom: 0;
    height: 1em;
}

.windowBody2 .vertScroll {
    position: absolute;
    right: 0;
    top: 0;
    bottom: 1em;
    width: 1em;
}

.windowBody2 .resizeGadget {
    position: absolute;
    right: 0;
    bottom: 0;
    width: calc(1em + 1px);
    height: calc(1em + 1px);
    border-left: 1px solid white;
    border-top: 1px solid white;
    padding: 1px;
}

button {
    background: transparent;
    height: inherit;
    padding: 0;
}

.wbIcon {
    display: inline-block;
}

div.wbIcon {
    float: left;
    min-width: 5em;
    min-height: 5em;
    z-index: 100;
    margin: .5em;
}

div.wbIcon > div:first-child {
    display: flex;
    justify-content: center;
}

div.wbIcon > div:last-child {
    text-align: center;
    font-weight: bold;
}

.wbIcon > div > svg {
    width: 5em !important;
    height: 3em !important;
    padding: .25em;
    display: block;
}

